<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_rename"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_clear_history"
        android:title="@string/clear_history"
        app:showAsAction="never" />
        
</menu> 